# immichBEAM

./: .env.release.local.example  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml  release.yml
design/: README.md  generate_logo.py  generate_state_icons.py
docs/: CODE_REVIEW.md  RELEASE_SECRETS.md  RELEASING.md  SECURITY_REVIEW.md  TODO.md
docs/research/: resumable-uploads.md
research/: IMMICH_API_REFERENCE.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_logo.py  generate_state_icons.py  icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  keychain.rs  lib.rs  main.rs  tray.rs  updater.rs
src-tauri/src/api/: client.rs  mod.rs  types.rs
src-tauri/src/sync/: cleanup.rs  engine.rs  hasher.rs  mod.rs  queue.rs  removable.rs  watcher.rs
src/components/: About.tsx  ActivityBar.tsx  AlbumList.tsx  AlbumView.tsx  AssetResults.tsx  Diagnostics.tsx  ErrorLog.tsx  FilterBar.tsx  FolderSettings.tsx  FreeUpSpace.tsx  HistoryView.tsx  LogViewer.tsx  Logo.tsx  MapView.tsx  Onboarding.tsx  Overview.tsx  PeopleView.tsx  PhotoBrowser.tsx  PhotoLightbox.tsx  PhotoTile.tsx  PlacesView.tsx  QueueView.tsx  RangeCalendar.tsx  SecurityBadge.tsx  ServerSettings.tsx  Sidebar.tsx  SmartResults.tsx  StatusIndicator.tsx  SyncSettings.tsx  TagInput.tsx  ThemeToggle.tsx  TimelineGrid.tsx  Toast.tsx  UpdateChecker.tsx  VirtualGrid.tsx
src/hooks/: useAssetSearch.ts  useBrowse.ts  useConfig.ts  useFreeable.ts  useHistory.ts  useInfiniteScroll.ts  usePaginated.ts  useProgress.ts  useQueue.ts  useStats.ts  useStatus.ts
src/lib/: assetUrl.ts  config.ts  format.ts  release.ts  tauri.ts  theme.ts
