[package]
name = "immichBEAM"
version = "0.4.0-beta.1"
description = "Cross-platform desktop sync client for Immich"
authors = ["immichBEAM"]
edition = "2021"

[lib]
name = "immich_beam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client. Matches the reqwest 0.13 that Tauri's stack uses, so only one
# copy is compiled. In 0.13 the `rustls-tls` feature was renamed to `rustls`
# (now the default backend); it also enables the TLS-info API
# (ClientBuilder::tls_info + reqwest::tls::TlsInfo) used for cert pinning.
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File watching
notify = "6"
notify-debouncer-full = "0.3"

# Hashing
sha1 = "0.10"
sha2 = "0.10"   # SHA-256 fingerprints of pinned certificates

# Logging
log = "0.4"
env_logger = "0.11"

# Utility
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
regex = "1"
walkdir = "2"
glob = "0.3"
mime_guess = "2"
base64 = "0.22"

# System info for device ID
hostname = "0.4"

# OS keychain for secure API key storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Move freed files to the OS trash/recycle bin (recoverable)
trash = "5"

[dev-dependencies]
# `test-util` enables tokio's paused-clock tests (start_paused = true).
tokio = { version = "1", features = ["full", "test-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
